--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
 
-    <title>Agência BRN</title>
+    <title>PORTIFÓLIO</title>
 </head>
 <body>
     
@@ -27,8 +27,8 @@
                 <ul>
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Especialidades</a></li>
-                    <li><a href="#">Sobre</a></li>
                     <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Formações</a></li>
                 </ul>
             </nav>
 
@@ -51,7 +51,6 @@
                     <ul>
                         <li><a href="#">Início</a></li>
                         <li><a href="#">Especialidades</a></li>
-                        <li><a href="#">Sobre</a></li>
                         <li><a href="#">Projetos</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
@@ -113,11 +112,11 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="images/foto.png" alt="">
+                        <img src="images/personagem.png" alt="">
                     </div><!--img-sobre-->
 
                     <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU BRUNO RODRIGUES.</span></h2>
+                        <h2>MUITO PRAZER, <span>SOU JEFFERSON SILVA.</span></h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
                         <div class="btn-social">
@@ -168,7 +167,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/logo.png" alt="Logotipo Agência BRN">
+                        <img src="images/logo.png" alt="Logo">
                     </div><!--logo-footer-->
                     <div class="btn-social">
                         <a href="#"><button><i class="bi bi-instagram"></i></button></a>
@@ -179,7 +178,7 @@
             </div><!--line-footer-->
 
             <div class="line-footer borda">
-                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:contato@bruno.com.br">contato@bruno.com.br</a></p>
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:contato@bruno.com.br">jeffsenai2024@gmail.com</a></p>
             </div><!--line-footer-->
         </div><!--interface-->
     </footer>
