--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
-                        <img src="images/pessoa.png" alt="">
+                        <img src="images/Design sem nome.png" alt="">
                     </div><!--img-topo-site-->
                 </div><!--flex-->
             </div><!--interface-->
